# advent_of_code_2022

./: .gitignore  Cargo.toml  README.md
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
src/day_1/: main.rs
src/day_2/: main.rs
