[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1"
path = "src/day1.rs"

[[bin]]
name = "day_2"
path = "src/day2.rs"

[[bin]]
name = "day_3"
path = "src/day3.rs"

[[bin]]
name = "day_4"
path = "src/day4.rs"

[[bin]]
name = "day_5"
path = "src/day5.rs"

[[bin]]
name = "day_6"
path = "src/day6.rs"

[[bin]]
name = "day_7"
path = "src/day7.rs"

[dependencies]
itertools = "0.10.5"
pest = "2.5.1"
pest_derive = "2.5.1"
regex = "1.7.0"
